PharmaDemo/src/objects/Call_Report__c.object
<CustomObject>
    <fields>
        <fullName>Accompanied_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accompanied Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <label>Attendees</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brick__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brick</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brick</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Report</relationshipLabel>
        <relationshipName>Call_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CallDate__c</fullName>
        <formula>Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CallDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Call Notes</label>
        <picklist>
            <picklistValues>
                <fullName>Tolerability/Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comparative Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficacy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Call Report</relationshipLabel>
        <relationshipName>R00Nj0000003oDLAEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Report</relationshipLabel>
        <relationshipName>R00Nj0000003oDKnEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Convert__c</fullName>
        <formula>If( RecordTypeId =&quot;012j0000000bXwm&quot;, HYPERLINK(&quot;/servlet/servlet.Integration?lid=01Nj0000000IlQB&amp;callreport_id=&quot; &amp; Id, IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Dj0000001nzOo&amp;id=015j0000000e7fJ&quot;, &quot;Convert Appointment to Call&quot;) ,&quot;_parent&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Convert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counted_For_Target_Actual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Counted For Target Actual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counted_for_Account_Frequency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Counted for Account Frequency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>NOW() + 7</defaultValue>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration (mins)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <formula>Contact__r.FirstName &amp;&quot; &quot;&amp; Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Call Report</relationshipLabel>
        <relationshipName>Call_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guest__c</fullName>
        <inlineHelpText>I accompanied by a guest, select accompanied call and add their name here</inlineHelpText>
        <label>Guest</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationId__c</fullName>
        <formula>Location__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LocationId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Report</relationshipLabel>
        <relationshipName>R00Nj0000003oDKlEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Med_rep_target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Med rep target</label>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>Call Report</relationshipLabel>
        <relationshipName>Call_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Call_Objective__c</fullName>
        <label>Next Call Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Discuss Efficacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide Comparative Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tolerability/Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comparative Data</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Can only link to an active Objective</errorMessage>
            <filterItems>
                <field>Objective__c.Active__c</field>
                <operation>equals</operation>
                <value>TRUE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Objective__c</referenceTo>
        <relationshipLabel>Call Report</relationshipLabel>
        <relationshipName>Call_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SummaryId__c</fullName>
        <externalId>true</externalId>
        <label>SummaryId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <picklist>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eDetail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00Nj0000003oDLXEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>IF( TEXT(Type__c) = &quot;Appointment&quot;, 
HYPERLINK(&quot;/&quot; &amp; Id , IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Dj0000001nzOo&amp;id=015j0000000e7fK&quot;,&quot;Appt&quot;),&quot;_parent&quot;), 
IF( TEXT(Type__c) = &quot;1:1&quot;, 
HYPERLINK(&quot;/&quot; &amp; Id , IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Dj0000001nzOo&amp;id=015j0000000e7fL&quot;,&quot;Call&quot;),&quot;_parent&quot;),
HYPERLINK(&quot;/&quot; &amp; Id , IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Dj0000001nzOo&amp;id=015j0000000e7fM&quot;,TEXT(Type__c)),&quot;_parent&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Call Report</label>
    <listViews>
        <fullName>All_Calls</fullName>
        <columns>View__c</columns>
        <columns>Contact__c</columns>
        <columns>Location__c</columns>
        <columns>Type__c</columns>
        <columns>CallDate__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Calls</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OpenCallsThisMonth</fullName>
        <columns>View__c</columns>
        <columns>Contact__c</columns>
        <columns>Location__c</columns>
        <columns>User__c</columns>
        <columns>Type__c</columns>
        <columns>CallDate__c</columns>
        <columns>Duration__c</columns>
        <columns>Brick__c</columns>
        <columns>Guest__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Closed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CallDate__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>1:1</value>
        </filters>
        <label>Open calls This Month</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Call Report</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Report</pluralLabel>
    <recordTypes>
        <fullName>Appointment</fullName>
        <active>true</active>
        <description>Appointment</description>
        <label>Appointment</label>
    </recordTypes>
    <recordTypes>
        <fullName>CallReport</fullName>
        <active>true</active>
        <description>Call Report</description>
        <label>Call Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locked_Call_Report</fullName>
        <active>true</active>
        <label>Locked Call Report</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>